# test_cmake_extras

a_pkg/: CMakeLists.txt  package.xml
a_pkg/cmake/: a_pkg-extras.cmake.em
b_pkg/: CMakeLists.txt  package.xml
b_pkg/cmake/: b_pkg-extras.cmake.em
c_pkg/: CMakeLists.txt  package.xml
